Prevent search box "flicker" on page load (Closes #149)

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -144,7 +144,6 @@ td p {
     width: 32%;
     min-width: 9em;
     max-width: 35em;
-    visibility: hidden; /*visibility is set to visible in search.js if javascript is supported*/
 }
 
 #search label {
